--- a/Documents/Thesis/TeX_files/innercover.tex
+++ b/Documents/Thesis/TeX_files/innercover.tex
@@ -14,14 +14,14 @@
 		\vspace{1cm}
 		
 		\LARGE
-		Stream analysis web application
+		Cloud framework for data streaming
 		
 		\vfill
 		
 		\Large
 		\begin{tabular}{ll}
 			\textbf{Absolvent:}&Kedves Szilard\\
-			\textbf{Coordonator:}&Associate professor Sasu Lucian Mircea, Ph.D.;
+			\textbf{Coordonator:}&Associate professor Sasu Lucian Mircea, Ph.D.
 		\end{tabular}
 		
 		\vfill
