--- a/Documents/Thesis/TeX_files/chapter01.tex
+++ b/Documents/Thesis/TeX_files/chapter01.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 \label{chap:01}
 
-\section{Problem statement and Motivation}
+\section{Problem statement and motivation}
 \label{chap:01:01}
 In the world of Big Data, data visualization tools and technologies are essential to analyze massive amounts of information and make data-driven decisions. Hence it is not a surprise that applications that tackle this need are in great demand. These applications use graphical representation of information and data by using visual elements like charts and graphs.
 
