--- a/Documents/Thesis/TeX_files/chapter02.tex
+++ b/Documents/Thesis/TeX_files/chapter02.tex
@@ -2,36 +2,20 @@
 \label{chap:02}
 In this chapter the basic user requirements are presented.
 
-\section{Nonfunctional requirements}
-\label{chap:02:01}
-
-\subsection{Access}
-\label{chap:02:01:01}
-The Stream Analysis web application is not open-source and its usage is not free. However it is accessible from all around the world as long as the user has internet connection.\\
-
-The application is targeting two types of users:
-\begin{itemize}
-	\item Advanced software engineers - that push data into the application. They need to register with an account and they are charged based on time.
-	\item Normal users - that can read and interpret that data from charts in a dashboard. They also need to register with an account and they are charged based on the value of the data they visualize.
-\end{itemize}
-
-\subsection{Performance}
-\label{chap:02:01:02}
-The application itself was intended to be very fast and responsive to user interactions. However it has no scaling policies set up so there is a limit of users that can use the web application simultaneously. The limit is around 500 req/second.
-
-\subsection{Guide}
-\label{chap:02:01:03}
-It has no stand alone public documentation that users can access, but this paper will softly guide users through its features in further chapters.
-
-
 \section{Functional requirements}
 \label{chap:02:02}
 
 \subsection{Application overview}
 \label{chap:02:02:01}
-Stream Analysis is a web application hosted in the cloud which offers two services:
+Stream Analysis is a web application that provides a hosting environment and defines a workflow for streaming applications, leveraged by cloud.
+
+The hosting environment is responsible for user related sensitive information storage, while it paves the ground for an infrastructure that can handle incoming data. Once information pours in, a dashboard is shown at the user's disposal. This dashboard is updated each time new data arrives, which basically makes it a tool for analytical purposes. The user can identify if a certain threshold was reached, exceeded, etc. 
+
+The workflow is predefined which makes it organized and coherent. Data is created and packed by the user of the application and funneled in through well defined channels. The stream of data arrives in a secure place where it waits to be queried. This place is located in the cloud so even he can create the data on-premise, he still needs constant access to the internet. Based on the user's choice the packed information is then retrieved in a real-time fashion or stored. Both ways the data is then accessed and charted. 2D plots are shown with the values at the Y axis, where the X axis holds the timestamps.
+
+It offers two services:
 \begin{itemize}
-	\item Push data into cloud - users have to create their own Docker image that streams any type of data into an ActiveMQ broker. The broker supports 5 types of protocols ([TODO]more information in chapter ...). Data is organized into topics and queues:
+	\item Push data into cloud - users have to create their own packed software application that streams any type of data into a broker. The broker supports 5 types of protocols ([TODO]more information in chapter ...). Data is organized into topics and queues:
 	\begin{itemize}
 		\item Topics - are used to handle real time messages
 		\item Queues - are used for historical data. Messages are stored and later retrieved
@@ -42,14 +26,39 @@ Stream Analysis is a web application hosted in the cloud which offers two servic
 		\item Create a repository for the image
 		\item Push image to repository
 		\item Add configuration for the container
-		\item Run image
-		\begin{enumerate}
-			\item Immediately
-			\item Create a scheduling rule to run the image multiple times over time
-		\end{enumerate}
+		\item Run image immediately or create a scheduling rule to run the image multiple times over time
 	\end{enumerate}
-	Once containers are being created the web application subscribes to the topics inserted by the user at step 1. The same happens with queues but in this case the stream of data is dequeued into files so that they can later be retrieved. 
+	Once containers are being created the web application subscribes to the topics defined by the user at step 1. The same happens with queues but in this case the stream of data is dequeued into files so that they can later be retrieved.
 	Stream Analysis also offers the user a dashboard to keep track of his created containers and scheduling rules.
-	\item Visualize data from the cloud - since data is split into topics and queues, the web application takes advantage of this and shows real time plots for topic streams and static time based plots for queue data.
+	\item Visualize data from the cloud - since data is split into topics and queues, the web application takes advantage of this and shows real time plots for topic streams and large scale based plots for queue data.
 \end{itemize}
+
+\section{Nonfunctional requirements}
+\label{chap:02:01}
+
+\subsection{Access}
+\label{chap:02:01:01}
+The Stream Analysis web application is accessible from all around the world as long as the user has internet connection, however it is not open-source and its usage is not free.\\
+
+The application is targeting two types of users:
+\begin{itemize}
+	\item Advanced software engineers - that push data into the application. They need to register with an account and they are charged based on time.
+	\item Normal users - that can read and interpret that data from charts in a dashboard. They also need to register with an account and they are charged based on the network traffic they generate during data visualization.
+\end{itemize}
+
+\subsection{Diversity}
+\label{chap:02:01:02}
+One of its main advantages consists in the ability to feed on any type of data. This asset makes it valuable in any kind of business or domain. For example in the field of meteorology users can plot the constantly changing weather. Having Stream Analysis at their disposal they can track real-time the wind changes. In the field of economics, users can map economical growth of a country next to another one and be able compare, draw conclusions, moreover maybe even forecast.
+
+\subsection{Performance}
+\label{chap:02:01:03}
+The application itself was intended to be very fast and responsive to user interactions. However it has no scaling policies set up so there is a limit of users that can use the web application simultaneously. The limit is around 500 reqs/second.
+
+\subsection{Security}
+\label{chap:02:01:04}
+In my views security is pivotal for any well designed and successful application. Users are guaranteed to not have exposed credentials or any kind of sensitive data. If there is a concern of information leakage, this matter is more deeply discussed in [TO DO Chapter ... ].  
+
+\subsection{Guide}
+\label{chap:02:01:05}
+This paper will softly guide users through its features in further chapters. At this moment it has no stand alone public documentation that users can access.
 
