--- a/Documents/Thesis/TeX_files/cover.tex
+++ b/Documents/Thesis/TeX_files/cover.tex
@@ -16,7 +16,7 @@
 		\Large
 		\begin{tabular}{ll}
 			\textbf{Author:}&Kedves Szilard\\
-			\textbf{Supervisor:}&Associate professor Sasu Lucian Mircea, Ph.D.;
+			\textbf{Supervisor:}&Associate professor Sasu Lucian Mircea, Ph.D.
 		\end{tabular}
 		
 		\vfill
