Updated thesis with chap 2

--- a/Documents/Thesis/TeX_files/chapter03.tex
+++ b/Documents/Thesis/TeX_files/chapter03.tex
@@ -1,2 +1,12 @@
-\chapter{Titlu capitol}
-\label{chap:01}
+\chapter{Framework architecture}
+\label{chap:03}
+
+At the highest macro level the framework can be put into perspective as shown in figure([TODO]). 
+\begin{itemize}
+	\item Data acquisition user -  
+	\item Packed data acquisition application made on-premise by an external user - 
+	\item The framework hosted in cloud
+\end{itemize}
+
+Diving into the frameworks architecture as illustrated in figure([TODO]) 
+
