--- a/Documents/Thesis/TeX_files/innercover.tex
+++ b/Documents/Thesis/TeX_files/innercover.tex
@@ -2,7 +2,7 @@
 	
 	\vspace*{-3cm}
 	\hspace{-2cm}
-	\includegraphics[width=0.8\linewidth]{./images/Logo-UT-MI-SPOT-EN} % inlocuiti cu Logo-UT-MI-SPOT-EN daca scrieti lucrarea in engleza
+	\includegraphics[width=0.8\linewidth]{./images/Logo-UT-MI-SPOT-EN}
 	
 	\begin{center}
 		\Huge
