--- a/Documents/Thesis/main.tex
+++ b/Documents/Thesis/main.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,12pt]{report}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{indentfirst}
 \usepackage{graphicx}
 \usepackage{fancyref}
