--- a/Documents/Thesis/TeX_files/cover.tex
+++ b/Documents/Thesis/TeX_files/cover.tex
@@ -15,7 +15,7 @@
 				
 		\Large
 		\begin{tabular}{ll}
-			\textbf{Author:}&Kedves Szilard\\
+			\textbf{Author:}&Kedves Szilard, engineer\\
 			\textbf{Supervisor:}&Associate professor Sasu Lucian Mircea, Ph.D.
 		\end{tabular}
 		
