--- a/Documents/Thesis/TeX_files/innercover.tex
+++ b/Documents/Thesis/TeX_files/innercover.tex
@@ -20,7 +20,7 @@
 		
 		\Large
 		\begin{tabular}{ll}
-			\textbf{Absolvent:}&Kedves Szilard\\
+			\textbf{Absolvent:}&Kedves Szilard, engineer\\
 			\textbf{Coordonator:}&Associate professor Sasu Lucian Mircea, Ph.D.
 		\end{tabular}
 		
