--- a/Documents/Thesis/BiB_files/references.bib
+++ b/Documents/Thesis/BiB_files/references.bib
@@ -2,3 +2,13 @@
 	title={"Amazon Web Services"},
 	url={https://en.wikipedia.org/wiki/Amazon_Web_Services}
 }
+
+@misc{angular-description,
+	title={"Angular"},
+	url={https://en.wikipedia.org/wiki/Angular_(web_framework)}
+}
+
+@misc{why-learn-angular,
+	title={"Angular"},
+	url={https://hackr.io/blog/why-should-you-learn-angular-in-2019}
+}
