--- a/Documents/Thesis/main.tex
+++ b/Documents/Thesis/main.tex
@@ -7,6 +7,7 @@
 \usepackage{fancyref}
 \usepackage{float}
 \usepackage{subfigure}
+\usepackage{dirtree}
 
 \usepackage[style=numeric,backend=bibtex]{biblatex}
 \addbibresource{./BiB_files/references.bib}
@@ -15,6 +16,7 @@
 \setmainfont{Calibri}
 
 \begin{document}
+	
 
 \include{./TeX_files/cover}
 \include{./TeX_files/innercover}
