advanced on Chapter 4

--- a/Documents/Thesis/BiB_files/references.bib
+++ b/Documents/Thesis/BiB_files/references.bib
@@ -12,3 +12,8 @@
 	title={"Angular"},
 	url={https://hackr.io/blog/why-should-you-learn-angular-in-2019}
 }
+
+@misc{asp-dotnet-core-description,
+	title={"ASPDotNetCore"},
+	url={https://docs.microsoft.com/en-us/aspnet/core/?view=aspnetcore-2.2}
+}
