advanced on chap4 and created chap5 and chap6

--- a/Documents/Thesis/BiB_files/references.bib
+++ b/Documents/Thesis/BiB_files/references.bib
@@ -17,3 +17,58 @@
 	title={"ASPDotNetCore"},
 	url={https://docs.microsoft.com/en-us/aspnet/core/?view=aspnetcore-2.2}
 }
+
+@misc{signalR-description,
+	title={"SignalR"},
+	url={https://en.wikipedia.org/wiki/SignalR}
+}
+
+@misc{docker-description,
+	title={"docker"},
+	url={https://opensource.com/resources/what-docker}
+}
+
+@misc{aws-ecs,
+	title={"ECS"},
+	url={https://docs.aws.amazon.com/AmazonECS/latest/developerguide/Welcome.html}
+}
+
+@misc{aws-ec2,
+	title={"EC2"},
+	url={https://aws.amazon.com/ec2/?nc2=h_m1}
+}
+
+@misc{amazon-mq,
+	title={"AmazonMQ"},
+	url={https://docs.aws.amazon.com/amazon-mq/latest/developer-guide/welcome.html}
+}
+
+@misc{apache-active-mq,
+	title={"ApacheActiveMQ"},
+	url={https://activemq.apache.org/}
+}
+
+@misc{s3,
+	title={"S3"},
+	url={https://docs.aws.amazon.com/AmazonS3/latest/dev/Welcome.html}
+}
+
+@misc{sns,
+	title={"SNS"},
+	url={https://docs.aws.amazon.com/sns/latest/dg/welcome.html}
+}
+
+@misc{aws-lambda,
+	title={"AWSLambda"},
+	url={https://docs.aws.amazon.com/lambda/latest/dg/welcome.html}
+}
+
+@misc{aws-cloudwatch,
+	title={"AWSCloudWatch"},
+	url={https://docs.aws.amazon.com/AmazonCloudWatch/latest/monitoring/WhatIsCloudWatch.html}
+}
+
+@misc{aws-ecr,
+	title={"ECR"},
+	url={https://docs.aws.amazon.com/AmazonECR/latest/userguide/what-is-ecr.html}
+}
